# maronn-auth-blog

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  TODO.md  deploy.sh  package.json  pnpm-lock.yaml  setup-dev.sh  tsconfig.json
.github/workflows/: deploy-api.yml  deploy-embed.yml  deploy-web.yml  deploy.yml
docs/: adsense-cloudflare-analytics-guide.md  environment-variables.md  r2-signed-url-setup.md
scripts/: schema.sql  setup-auth0-m2m.sh  upload-secrets.sh
tools/feature-extractor/: pyproject.toml
tools/feature-extractor/feature_extractor/: analyzer.py  cli.py  markdown_stripper.py
tools/feature-extractor/tests/: test_analyzer.py  test_markdown_stripper.py
