[project]
name = "feature-extractor"
version = "0.1.0"
description = "記事の日本語テキストから形態素解析を用いて検索用特徴量を抽出する"
requires-python = ">=3.10"
dependencies = [
    "janome>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
extract-features = "feature_extractor.cli:main"
